--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -188,7 +188,6 @@
     <PreBuildEvent>git rev-list --count HEAD &gt; buildrev.txt
 git rev-parse --abbrev-ref HEAD &gt; branch.txt
 git rev-parse --short HEAD &gt; commithash.txt</PreBuildEvent>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*" "$(ProjectDir)Distribution"
-</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*" "$(ProjectDir)Distribution"</PostBuildEvent>
   </PropertyGroup>
 </Project>
