--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Run">
+    <PropertyGroup Condition="$(Framework) == ''">
+        <Framework>.</Framework>
+    </PropertyGroup>
+
     <Target Name="Run">
         <CallTarget Targets="Compile" />
         <CallTarget Targets="Verify" Condition="$(SignAssembly) == true"/>
@@ -8,34 +12,35 @@
 
     <Target Name="Clean">
         <ItemGroup>
-            <MonoCrossClean Include="$(ProjectDir)bin/**" />
-            <MonoCrossClean Include="$(ProjectDir)obj/**" />
+            <MonoCrossClean Include="$(Framework)/bin/**" />
+            <MonoCrossClean Include="$(Framework)/obj/**" />
         </ItemGroup>
         <Delete Files="@(MonoCrossClean)" />
     </Target>
 
     <Target Name="Compile" DependsOnTargets="Clean">
-        <MSBuild Projects="$(ProjectDir)MonoCross$(Ext).csproj" Condition="'$(Ext)' != ''" />
-        <Exec WorkingDirectory="$(ProjectDir)" Command="dotnet build /p:SignAssembly=$(SignAssembly);Configuration=$(Configuration) $(ProjectDir)MonoCross.csproj" Condition="'$(Ext)' == ''" />
+        <MSBuild Projects="$(Framework)/MonoCross$(Ext).csproj" Condition="'$(Ext)' != ''" />
+        <Exec WorkingDirectory="$(Framework)" Command="dotnet build /p:SignAssembly=$(SignAssembly);Configuration=$(Configuration) $(Framework)/MonoCross.csproj" Condition="'$(Ext)' == ''" />
+        <Exec WorkingDirectory="$(Framework)" Command="git checkout -- &quot;$(Framework)/Properties/AssemblyInfo.cs&quot;" />
     </Target>
 
     <Target Name="Verify">
         <ItemGroup>
             <MonoCrossVerify Include="Distribution/MonoCross$(Ext).dll" />
         </ItemGroup>
-        <Exec Command='"$(SDK40ToolsPath)sn" -q -v %(MonoCrossVerify.Identity) >> verify.txt' ContinueOnError="true" />
-        <ReadLinesFromFile File="verify.txt">
+        <Exec Command='"$(SDK40ToolsPath)sn" -q -v %(MonoCrossVerify.Identity) >> $(Framework)/verify.txt' ContinueOnError="true" />
+        <ReadLinesFromFile File="$(Framework)/verify.txt">
             <Output TaskParameter="Lines" PropertyName="Verify" />
         </ReadLinesFromFile>
-        <Delete Files="verify.txt" />
+        <Delete Files="$(Framework)/verify.txt" />
         <Error Text="$(Verify)" Condition="'$(Verify)' != ''" />
     </Target>
 
     <Target Name="Package">
-      <!-- <XmlRead XPath="//dependency/@id" XmlFileName="$(ProjectDir)MonoCross$(Ext).nuspec"> -->
+      <!-- <XmlRead XPath="//dependency/@id" XmlFileName="$(Framework)/MonoCross$(Ext).nuspec"> -->
         <!-- <Output TaskParameter="Value" PropertyName="_Deps" /> -->
       <!-- </XmlRead> -->
-      <!-- <XmlRead XPath="//dependency/@version" XmlFileName="$(ProjectDir)MonoCross$(Ext).nuspec"> -->
+      <!-- <XmlRead XPath="//dependency/@version" XmlFileName="$(Framework)/MonoCross$(Ext).nuspec"> -->
         <!-- <Output TaskParameter="Value" ItemName="Formats" /> -->
       <!-- </XmlRead> -->
       <ItemGroup>
@@ -46,10 +51,10 @@
         <Output TaskParameter="Value" ItemName="Dependencies" />
       </GetFileVersion>
       <!-- <XmlUpdate XPath="//dependency[@id=&quot;%(Dependencies.Name)&quot;]/@version" -->
-            <!-- XmlFileName="$(ProjectDir)MonoCross$(Ext).nuspec" -->
+            <!-- XmlFileName="$(Framework)/MonoCross$(Ext).nuspec" -->
             <!-- Value="%(Version)"/> -->
-      <Exec WorkingDirectory="$(ProjectDir)" Command="nuget pack -Symbols -Version $(AssemblyVersion) MonoCross$(Ext).csproj -Prop Configuration=$(Configuration)" />
-      <Exec WorkingDirectory="$(ProjectDir)" Command="git checkout -- MonoCross$(Ext).nuspec" />
+      <Exec WorkingDirectory="$(Framework)" Command="nuget pack -Symbols -Version $(AssemblyVersion) MonoCross$(Ext).csproj -Prop Configuration=$(Configuration)" />
+      <Exec WorkingDirectory="$(Framework)" Command="git checkout -- MonoCross$(Ext).nuspec" />
     </Target>
 
   <UsingTask TaskName="GetFileVersion" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
