--- a/Utilities/MonoCross.Utilities.iOS.csproj
+++ b/Utilities/MonoCross.Utilities.iOS.csproj
@@ -20,8 +20,9 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -67,22 +68,21 @@
     <UpdateAssemblyInfo AssemblyInfo="$(ProjectDir)Properties/AssemblyInfo.cs" Version="$(FileVersion)" Branch="$(Branch)" CommitHash="$(CommitHash)" Copyright="$(Copyright)" />
   </Target>
   <Target Name="AfterBuild">
-    <Copy SourceFiles="$(TargetDir)$(TargetName).dll;$(TargetDir)$(TargetName).pdb" DestinationFolder="$(SolutionDir)Distribution" />
+    <Copy SourceFiles="$(TargetDir)$(TargetName).dll;$(TargetDir)$(TargetName).pdb" DestinationFolder="../Distribution" />
     <!--<Exec WorkingDirectory="$(ProjectDir)" Command="git checkout -><- Properties/AssemblyInfo.cs" />-->
   </Target>
   <UsingTask TaskName="UpdateAssemblyInfo" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
     <ParameterGroup>
-        <AssemblyInfo ParameterType="System.String" Required="true" />
-        <Version ParameterType="System.String" Required="true" />
-        <Branch ParameterType="System.String" Required="true" />
-        <CommitHash ParameterType="System.String" Required="true" />
-        <Copyright ParameterType="System.String" Required="true" />
+      <AssemblyInfo ParameterType="System.String" Required="true" />
+      <Version ParameterType="System.String" Required="true" />
+      <Branch ParameterType="System.String" Required="true" />
+      <CommitHash ParameterType="System.String" Required="true" />
+      <Copyright ParameterType="System.String" Required="true" />
     </ParameterGroup>
     <Task>
-        <Using Namespace="System.IO"/>
-        <Using Namespace="System.Diagnostics"/>
-        <Code Type="Fragment" Language="cs">
-<![CDATA[
+      <Using Namespace="System.IO" />
+      <Using Namespace="System.Diagnostics" />
+      <Code Type="Fragment" Language="cs"><![CDATA[
 	var lines = File.ReadAllLines(AssemblyInfo);
 	File.WriteAllLines(AssemblyInfo, lines.Take(lines.Length - 4).Union(new[] {
 		"[assembly: AssemblyVersion(\"" + Version + "\")]",
@@ -90,8 +90,7 @@
 		"[assembly: AssemblyInformationalVersion(\"" + Version + "-" + Branch + "." + CommitHash + "\")]",
 		"[assembly: AssemblyCopyright(\"" + Copyright + "\")]",
 	}));
-]]>
-        </Code>
+]]></Code>
     </Task>
   </UsingTask>
 </Project>
