--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
         <Output TaskParameter="Value" ItemName="Assembly" />
       </GetFileVersion>
       <Exec Condition="'$(Ext)' != ''" WorkingDirectory="$(Framework)" Command="nuget pack -Symbols -Version %(Assembly.Version) MonoCross$(Ext).csproj -Prop Configuration=$(Configuration)" />
-      <Exec Condition="'$(Ext)' == ''" WorkingDirectory="$(Framework)" Command="dotnet pack --include-symbols /p:PackageVersion=%(Assembly.Version) -c $(Configuration) MonoCross.csproj" />
+      <Exec Condition="'$(Ext)' == ''" WorkingDirectory="$(Framework)" Command="dotnet pack --include-symbols /p:PackageVersion=%(Assembly.Version) -o $(Framework) -c $(Configuration) MonoCross.csproj" />
       <Exec WorkingDirectory="$(Framework)" Command="git checkout -- MonoCross$(Ext).nuspec" />
     </Target>
 
