--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -198,6 +198,18 @@ set /a LINES=LINES-3
 
 call:PrintFirstNLine &gt; output.txt
 
+FOR /F "tokens=*" %%A IN ('DATE/T') DO FOR %%B IN (%%A) DO SET Today=%%B
+FOR /F "tokens=1-3 delims=/-" %%A IN ("%Today%") DO (
+	SET DayMonth=%%A
+	SET MonthDay=%%B
+	SET Year=%%C
+)
+
+echo [assembly: AssemblyVersion("4.0.0.%BUILDREV%")] &gt;&gt; output.txt
+echo [assembly: AssemblyInformationalVersion("4.0.0.%BUILDREV%-%BRANCH%.%COMMITHASH%")] &gt;&gt; output.txt
+echo [assembly: AssemblyCopyright("Copyright ©  %Year%")] &gt;&gt; output.txt
+move output.txt $(ProjectDir)Properties\AssemblyInfo.cs
+
 goto EOF
 
 :PrintFirstNLine
