--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -205,9 +205,9 @@ FOR /F "tokens=1-3 delims=/-" %%A IN ("%Today%") DO (
 	SET Year=%%C
 )
 
-echo [assembly: AssemblyVersion("4.0.0.%BUILDREV%")] &gt;&gt; output.txt
-echo [assembly: AssemblyInformationalVersion("4.0.0.%BUILDREV%-%BRANCH%.%COMMITHASH%")] &gt;&gt; output.txt
-echo [assembly: AssemblyCopyright("Copyright ©  %Year%")] &gt;&gt; output.txt
+echo "%Year%")]&gt;&gt; output.txt
+echo [assembly: AssemblyVersion("4.0.0.%BUILDREV%")]&gt;&gt; output.txt
+echo [assembly: AssemblyInformationalVersion("4.0.0.%BUILDREV%-%BRANCH%.%COMMITHASH%")]&gt;&gt; output.txt
 move output.txt $(ProjectDir)Properties\AssemblyInfo.cs
 
 goto EOF
