--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -191,7 +191,7 @@ git rev-parse --short HEAD &gt; commithash.txt &amp;&amp; set /p COMMITHASH=&lt;
 
 setlocal EnableDelayedExpansion
 set LINES=0
-for /f "delims==" %25%25I in ($(ProjectDir)Properties\AssemblyInfo.cs) do (
+for /f "delims==" %25%25I in ("$(ProjectDir)Properties\AssemblyInfo.cs") do (
     set /a LINES=LINES+1    
 )
 set /a LINES=LINES-3
@@ -208,17 +208,17 @@ FOR /F "tokens=1-3 delims=/-" %%A IN ("%Today%") DO (
 echo "%Year%")]&gt;&gt; output.txt
 echo [assembly: AssemblyVersion("4.0.0.%BUILDREV%")]&gt;&gt; output.txt
 echo [assembly: AssemblyInformationalVersion("4.0.0.%BUILDREV%-%BRANCH%.%COMMITHASH%")]&gt;&gt; output.txt
-move output.txt $(ProjectDir)Properties\AssemblyInfo.cs
+move output.txt "$(ProjectDir)Properties\AssemblyInfo.cs"
 
 goto EOF
 
 :PrintFirstNLine
 set cur=0
-for /f "delims==" %25%25I in ($(ProjectDir)Properties\AssemblyInfo.cs) do (
+for /f "delims==" %25%25I in ("$(ProjectDir)Properties\AssemblyInfo.cs") do (
     echo %25%25I
     set /a cur=cur+1    
     if "!cur!"=="%25LINES%25" goto EOF
-) 
+)
 
 :EOF 
 
